compiler/tests/fuzz/negative_corpus/parse_invalid_trait_syntax.mlc
trait BrokenTrait {
  fn missing_body(self: i32) -> i32
